syntax = "proto3"; // 告诉编译器此文件使用什么版本的语法

package v1;

import "google/protobuf/timestamp.proto";

// 包导入路径
option go_package = "github.com/myproj/auler/pkg/proto/auler/v1";

// Auler 定义了一个 Auler RPC 服务.
service Auler {
    // 罗列用户，为简单模式（无数据流）
    rpc ListUser(ListUserRequest) returns (ListUserResponse) {}
}

message ≈ {
    string username = 1;         
    string nickname = 2;         
    string email = 4;         
    string phone = 5;         
    google.protobuf.Timestamp createdAt = 6;         
    google.protobuf.Timestamp updatedAt = 7;
    // 未开发
    int64 spellCount = 8;         
         
}

// ListUserRequest 指定了 `ListUser` 接口的请求参数.
message ListUserRequest {
    int64 limit = 1;
    int64 offset = 2;
}


// ListUserResponse 指定了 `GET /v1/users` 接口的返回参数，相当于 HTTP Response.
message ListUserResponse {
    int64 totalCount = 1;         
    repeated UserInfo Users = 2;
}